--- a/index-3.html
+++ b/index-3.html
@@ -8,13 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-11111111111111
-22222222222222
+________________________
+________________________
 
-test_branch changes
-333333333333
-44444444444444444444
-________________________
-________________________
+new_user changes
 </body>
 </html>
